# experiments

./: .clang-format  .editorconfig  .gitattributes  .gitignore  README.md  areaOptimizer.py  beautifulPython.py  chitterFractal.py  flatten.py  gwentMonitor.py  helloworld.py  regex.py  setup.py  so3.py  so_ascii.py
archived/: areaOptimizer.py  beautifulPython.py  fizzbuzz.py  flatten.py  gwentMonitor.py  helloworld.py  regex.py  setup.py  txt_smile.txt
asm-arm/: .cproject
bash/: array_based_commands.sh  download_bdd100k.sh  ffmpeg_video_info.sh  frece_mimetype.sh  source_only.sh
bf/: bf.py  cmp_eq.bf  hi.bf  reverse.bf
common-lisp/: introductory.lisp  tictactoe.lisp
cpp/: .clang-format
cpp/opengl-cube/: CMakeLists.txt  Makefile  fshader.glsl  main.cpp  shader.cpp  shader.h  vshader.glsl
cs/: Program.cs
fortran/: hello_world.f  phys395_hw0_fib.f90  tutorial.f
hs/: experiment.hs  hackerrank_grading.hs  hello_world.hs  lambda_calculus_parser.hs  prelude.hs  so_cyclic_perms.hs  so_recurse_list.hs  state.hs
java/: HelloWorld.java
lua/: match_lines.lua
math342/: euclid_algorithm.py
perl/: hello_world.pl  imacro_DPA.pl  sort.pl
pyanaconda/: codility_2.py  codility_3.py  diffgeom_sympydocs.py  plot.py  tensorflowTest.py  test.py  tf_linreg.py
rust/: hello_world.rs
scala/: ScalaTutorial.scala  ScalaTutorialWorksheet.sc
scheme/: tutorial.scm
so/: so.py  so_conv_translation.py  so_montyhall.py  so_opencv.py  so_round_robin.py
spice/: simple.cir
tex/: .gitignore  autograd.tex  basics.tex  covariance_matrix_tensor_channels.tex  experiment.tex  (+4 more)
(+604 files in other folders)
